--- a/Changelog
+++ b/Changelog
@@ -7,13 +7,42 @@
 Next
 ====
 
+.. _version-2.7.0:
+
+2.7.0
+=====
+:release-date: 2024-08-21
+:release-by: Christian Clauss (@cclauss)
+
+Added
+~~~~~
+
+- Add official support for Django 5.1 (:github_pr:`761`)
+- Relax Django upper version to allow version 5.1 (:github_pr:`756`)
+- Add ``PeriodicTaskInline`` to the schedule admin to showing tasks using the schedule (:github_pr:`743`)
+
+Fixed
+~~~~~
+
+- Fix display of long name day of week in admin (:github_pr:`745`)
+- Fix a few French translations (:github_pr:`760`)
+- Fix documentation about timezone changes (:github_pr:`769`)
+- Remove usages of deprecated setuptools API ``setuptools.command.test`` (:github_pr:`771`)
+- Clean up running of ``setup.py`` as it's deprecated (:github_pr:`737`)
+
+Project infrastructure
+~~~~~~~~~~~~~~~~~~~~~~
+
+- Automate PyPI release from GitHub actions using trusted publisher (:github_pr:`749`)
+- Simplify logic for minimum Python requirement (:github_pr:`765`)
+- Add Ruff to pre-commit config (:github_pr:`778`)
 
 .. _version-2.6.0:
 
 2.6.0
 =====
 :release-date: 2024-03-03
-:release-by: Christian Clauss
+:release-by: Christian Clauss (@cclauss)
 
 - Avoid crash when can not get human readable description (#648).
 - Update codeql-analysis.yml (#653).
